# oxikcde

./: .gitignore  Cargo.toml  LICENSE  README.md  default_config.toml  flake.nix
src/: app.rs  cli.rs  comic.rs  event.rs  main.rs
src/app/: cli.rs  comic.rs  config.rs  event.rs  state.rs  ui.rs
src/app/config/: keybindings.rs  style.rs  terminal.rs
src/app/ui/: image.rs  terminal.rs
