[package]
name = "oxikcde"
version = "0.1.0"
edition = "2021"
authors = ["TadoTheMiner"]
description = "XKCD oxidised"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
cli-log = "2.1.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "5.0.1"
image = "0.25.4"
isahc = "1.7.2"
rand = "0.8.5"
ratatui = {version = "0.29.0", features = ["unstable-rendered-line-info"]}
ratatui-image = "3.0.0"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
