[package]
name = "oxikcde"
version = "0.1.0"
edition = "2021"
authors = ["TadoTheMiner"]
description = "XKCD oxidised"

[dependencies]
bitflags = "2.8.0"
clap = { version = "4.5.20", features = ["cargo", "derive", "string"] }
cli-log = "2.1.0"
color-eyre = "0.6.3"
colors-transform = "0.2.11"
crossterm = "0.28.1"
dirs = "5.0.1"
figment = { version = "0.10.19", features = ["toml"] }
image = "0.25.4"
isahc = "1.7.2"
open = "5.3.1"
rand = "0.8.5"
ratatui = {version = "0.29.0", features = ["unstable-rendered-line-info"]}
ratatui-image = "5.0.0"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
xterm-query = "0.5.0"
